# chess-agent

./: .gitignore  CMakeLists.txt  ChessSampling.cpp  ChessSampling.h  HogSvg.cpp  HogSvgTrain.cpp  application-utils.c  application-utils.cpp  application-utils.h  application_utils.cpp  application_utils.h  applicationutils.cpp  applicationutils.h  chess-window.cpp  chess-window.h  chess-worker.cpp  chess.cpp  chess.h  chessaction.cpp  chessaction.h  chesspiece.cpp  chesspiece.h  chesswindow.cpp  chesswindow.h  chessworker.cpp  chessworker.h  colorfilterdialog.cpp  colorfilterdialog.h  colorfilterdialog.ui  cvanndetection.cpp  cvanndetection.h  detection.cpp  detection.h  detectionthread.cpp  detectionthread.h  knndection.cpp  knndection.h  knndetection.cpp  knndetection.h  main-window.cpp  (+16 more)
resources/: app-main.glade  appMain.glade  knn.xml  train.txt
